--- a/fastfashion/frontend/templates/frontend/index.html
+++ b/fastfashion/frontend/templates/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
     <title>Fast Fashion</title>
 </head>
 <body>
